--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 */
 :root{
   --color-blue-visual-weight: #282c34;
-  --color-basic-background: grey;
+  --color-basic-background: #aaaaaa;
   --maincontent-maxwidth: 800px;
   --maincontent-vpadding: 10vmin;
   --maincontent-innerspacing: min(10vmin,2em);
